fixed navbar collapse icon

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ code {
 }
 
 /*@navbar is same color as MLICCI color*/
-.navbar {
+Nav{
 background-color: #6d1b6c;
 }
 
